Fix merge compile issues